logs/validate.20260408-010659.log
Mode: isolate
Isolate: including Chap37 Chap45 Chap18 Chap19 Chap23 Chap06 Chap05 Chap02 Chap56 Chap57
error: unexpected token, expected `;`
   --> src/Chap57/DijkstraStEphU64.rs:243:37
    |
243 | ...                   implies graph@.A.contains((v, (#[trigger] it@.1[j])@.0, it@.1[j]@.1))
    |                               ^^^^^

error[E0425]: cannot find type `PQEntry` in this scope
   --> src/Chap57/DijkstraStEphU64.rs:337:20
    |
337 |     impl Debug for PQEntry {
    |                    ^^^^^^^ not found in this scope
    |
help: consider importing this struct
    |
 30 +     use crate::Chap57::DijkstraStEphF64::DijkstraStEphF64::PQEntry;
    |

error[E0425]: cannot find type `PQEntry` in this scope
   --> src/Chap57/DijkstraStEphU64.rs:346:22
    |
346 |     impl Display for PQEntry {
    |                      ^^^^^^^ not found in this scope
    |
help: consider importing this struct
    |
 30 +     use crate::Chap57::DijkstraStEphF64::DijkstraStEphF64::PQEntry;
    |

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0425`.
Elapsed: 10s
Sampled Memory Usage: peak rust_verify RSS: 4374MB, peak z3 RSS: 341MB, min free: 21164MB
Sampled CPU Usage: rust_verify: 61s, z3 children: 25s
